# game-of-ur

./: .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp
test/: dummyTest.cpp
